Added CustomAccessibilityService to speak out text from all TextViews in the window

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AccessibilityServiceDemo</string>
+    <string name="accessibility_service_label">*TextReader*</string>
 </resources>
